--- a/src/containers/home/index.css
+++ b/src/containers/home/index.css
@@ -10,7 +10,7 @@
     margin: 0.5rem;
     padding: 0.533333rem 1.6rem;
     width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* X-offset, Y-offset, Blur-radius, Spread-radius, Color */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 
@@ -26,7 +26,7 @@
 }
 
 .home-logo img {
-    vertical-align: middle; /* Nodig om verticaal te centreren binnen line-height */
+    vertical-align: middle;
 }
 
 .weather-widget {
@@ -42,7 +42,7 @@
     text-align: center;
     color: #333;
     margin-bottom: 10px;
-    padding-bottom: 9px; /* Verhoogd naar 9px om 4px ruimte toe te voegen boven de 1px border */
+    padding-bottom: 9px;
     border-bottom: 1px solid lightgrey;
 }
 
@@ -63,42 +63,37 @@
     margin-left: 20px;
 }
 
-/* Basisstijl voor de zoek-input */
 .form-control {
-    transition: transform 0.2s ease-in-out; /* Voegt een soepele overgang toe voor de transform eigenschap */
+    transition: transform 0.2s ease-in-out;
 }
 
-/* Stijl voor hover-effect */
 .form-control:hover {
-    transform: scale(1.05); /* Vergroot de input met 5% */
+    transform: scale(1.05);
 }
 
-/* Aanpassing voor de input group */
 .input-group .form-control {
-    border-left: 0; /* Verwijder de linker rand van de input */
-    border-right: 0; /* Verwijder de rechter rand van de input */
+    border-left: 0;
+    border-right: 0;
 }
 
 .input-group .form-control:focus {
-    box-shadow: none; /* Verwijder de focus schaduw rond de input */
+    box-shadow: none;
 }
 
 .input-group-text {
-    background: #fff; /* Zet de achtergrondkleur van het input group text element */
-    border-right: 0; /* Verwijder de rechter rand */
+    background: #fff;
+    border-right: 0;
 }
 
 .input-group button {
-    border-left: 0; /* Verwijder de linker rand van de knop */
+    border-left: 0;
 }
 
-/* Verwijder randen en achtergrond van de knop om het eruit te laten zien als een icoon */
 .input-group button {
     background: transparent;
     border: none;
 }
 
-/* Zorg ervoor dat de iconen dezelfde kleur hebben als de tekst */
 .fa-search, .fa-arrow-right {
     color: #495057;
 }
@@ -122,5 +117,21 @@ h1 {
     font-family: 'Montserrat', sans-serif;
 }
 
+h3 {
+    font-family: 'Montserrat', sans-serif;
+}
 
+.thema-item {
+    margin-bottom: 1rem;
+}
 
+.thema-icon {
+    width: 50px;
+    margin-bottom: 0.5rem;
+}
+
+@media (max-width: 768px) {
+    .thema-icon {
+        width: 40px;
+    }
+}
